--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="grid">
         <div class="row">
             <div class="col-">
-                <div class="col"></div>
+                <div class="col">12 columns</div>
             </div>
         </div>
     </div>
