--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
     <div class="grid">
         <div class="row">
-            <div class="col-">
-                <div class="col">12 columns</div>
+            <div class="col-2">
+                <div class="col">2 columns</div>
+            </div>
+            <div class="col-8">
+                <div class="col">8 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 columns</div>
             </div>
         </div>
     </div>
