--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="grid">
+        <!-- Desktop Grid 4 columns -->
         <div class="row">
             <div class="col-2">
                 <div class="col">2 columns</div>
@@ -19,6 +20,36 @@
             </div>
             <div class="col-2">
                 <div class="col">2 columns</div>
+            </div>
+        </div>
+        <!-- Desktop Grid 4 columns -->
+        <div class="row">
+            <div class="col-2">
+                <div class="col">2 columns</div>
+            </div>
+            <div class="col-4">
+                <div class="col">4 columns</div>
+            </div>
+            <div class="col-4">
+                <div class="col">4 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 columns</div>
+            </div>
+        </div>
+        <!-- Tablet Grid 2 columns -->
+        <div class="row">
+            <div class="col-6">
+                <div class="col">6 columns</div>
+            </div>
+            <div class="col-6">
+                <div class="col">6 columns</div>
+            </div>
+        </div>
+        <!-- Mobile Grid 1 column -->
+        <div class="row">
+            <div class="col-12">
+                <div class="col">12 columns</div>
             </div>
         </div>
     </div>
