Adding media queries

--- a/index.html
+++ b/index.html
@@ -4,52 +4,112 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
     <meta charset="utf-8">
     <title>Vignelli - Responsive Grid</title>
-    <link href="stylesheet/main.css" rel="stylesheet">
+    <link href="stylesheet/vignelli.css" rel="stylesheet">
     <meta name="description" content="Vignelli - A responsive fluid grid ">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
     <div class="grid">
-        <!-- Desktop Grid 4 columns -->
-        <div class="row">
-            <div class="col-2">
-                <div class="col">2 columns</div>
-            </div>
-            <div class="col-8">
-                <div class="col">8 columns</div>
-            </div>
-            <div class="col-2">
-                <div class="col">2 columns</div>
-            </div>
-        </div>
-        <!-- Desktop Grid 4 columns -->
-        <div class="row">
-            <div class="col-2">
-                <div class="col">2 columns</div>
-            </div>
-            <div class="col-4">
-                <div class="col">4 columns</div>
-            </div>
-            <div class="col-4">
-                <div class="col">4 columns</div>
-            </div>
-            <div class="col-2">
-                <div class="col">2 columns</div>
-            </div>
-        </div>
-        <!-- Tablet Grid 2 columns -->
-        <div class="row">
-            <div class="col-6">
-                <div class="col">6 columns</div>
-            </div>
-            <div class="col-6">
-                <div class="col">6 columns</div>
-            </div>
-        </div>
-        <!-- Mobile Grid 1 column -->
+        <!-- Grid 1 column -->
         <div class="row">
             <div class="col-12">
-                <div class="col">12 columns</div>
+                <div class="col">1 columns</div>
+            </div>
+        </div>
+        <!-- Grid 2 columns -->
+        <div class="row">
+            <div class="col-6">
+                <div class="col">2 columns</div>
+            </div>
+            <div class="col-6">
+                <div class="col">2 columns</div>
+            </div>
+        </div>
+        <!-- Grid 3 columns -->
+        <div class="row">
+            <div class="col-4">
+                <div class="col">3 columns</div>
+            </div>
+            <div class="col-4">
+                <div class="col">3 columns</div>
+            </div>
+            <div class="col-4">
+                <div class="col">3 columns</div>
+            </div>
+        </div>
+        <!-- Grid 4 columns -->
+        <div class="row">
+            <div class="col-3">
+                <div class="col">4 columns</div>
+            </div>
+            <div class="col-3">
+                <div class="col">4 columns</div>
+            </div>
+            <div class="col-3">
+                <div class="col">4 columns</div>
+            </div>
+            <div class="col-3">
+                <div class="col">4 columns</div>
+            </div>
+        </div>
+        <!-- Grid 6 columns -->
+        <div class="row">
+            <div class="col-2">
+                <div class="col">6 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">6 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">6 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">6 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">6 columns</div>
+            </div>
+            <div class="col-2">
+                <div class="col">6 columns</div>
+            </div>
+        </div>
+        <!-- Grid 12 columns -->
+        <div class="row">
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
+            </div>
+            <div class="col-1">
+                <div class="col">12</div>
             </div>
         </div>
     </div>
